// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugins/styled-components > should apply styledComponents option to swc-loader 1`] = `
{
  "include": [
    {
      "and": [
        "<ROOT>",
        {
          "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
        },
      ],
    },
    /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
  ],
  "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
  "type": "javascript/auto",
  "use": [
    {
      "loader": "builtin:swc-loader",
      "options": {
        "env": {
          "coreJs": "3.36",
          "mode": "usage",
          "shippedProposals": true,
          "targets": [
            "chrome >= 87",
            "edge >= 88",
            "firefox >= 78",
            "safari >= 14",
          ],
        },
        "isModule": "unknown",
        "jsc": {
          "externalHelpers": true,
          "parser": {
            "decorators": true,
            "syntax": "typescript",
            "tsx": false,
          },
          "preserveAllComments": true,
          "transform": {
            "decoratorMetadata": true,
            "legacyDecorator": true,
            "useDefineForClassFields": false,
          },
        },
        "rspackExperiments": {
          "styledComponents": {
            "displayName": true,
            "pure": false,
            "ssr": false,
            "transpileTemplateLiterals": true,
          },
        },
      },
    },
  ],
}
`;

exports[`plugins/styled-components > should enable ssr option when target contains node 1`] = `
{
  "include": [
    {
      "and": [
        "<ROOT>",
        {
          "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
        },
      ],
    },
    /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
  ],
  "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
  "type": "javascript/auto",
  "use": [
    {
      "loader": "builtin:swc-loader",
      "options": {
        "env": {
          "targets": [
            "node >= 16",
          ],
        },
        "isModule": "unknown",
        "jsc": {
          "externalHelpers": true,
          "parser": {
            "decorators": true,
            "syntax": "typescript",
            "tsx": false,
          },
          "preserveAllComments": true,
          "transform": {
            "decoratorMetadata": true,
            "legacyDecorator": true,
            "useDefineForClassFields": false,
          },
        },
        "rspackExperiments": {
          "styledComponents": {
            "displayName": true,
            "pure": false,
            "ssr": true,
            "transpileTemplateLiterals": true,
          },
        },
      },
    },
  ],
}
`;

exports[`plugins/styled-components > should enable ssr option when target contains node 2`] = `
{
  "include": [
    {
      "and": [
        "<ROOT>",
        {
          "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
        },
      ],
    },
    /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
  ],
  "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
  "type": "javascript/auto",
  "use": [
    {
      "loader": "builtin:swc-loader",
      "options": {
        "env": {
          "coreJs": "3.36",
          "mode": "usage",
          "shippedProposals": true,
          "targets": [
            "chrome >= 87",
            "edge >= 88",
            "firefox >= 78",
            "safari >= 14",
          ],
        },
        "isModule": "unknown",
        "jsc": {
          "externalHelpers": true,
          "parser": {
            "decorators": true,
            "syntax": "typescript",
            "tsx": false,
          },
          "preserveAllComments": true,
          "transform": {
            "decoratorMetadata": true,
            "legacyDecorator": true,
            "useDefineForClassFields": false,
          },
        },
        "rspackExperiments": {
          "styledComponents": {
            "displayName": true,
            "pure": false,
            "ssr": true,
            "transpileTemplateLiterals": true,
          },
        },
      },
    },
  ],
}
`;
